--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1/e_word
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=7589014bn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
