--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://127.0.0.1/e_word
 spring.datasource.username=root
 spring.datasource.password=7589014bn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+app.name=word
+app.description=${app.name} is a Spring Boot application
