change server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=7589014bn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 app.name=word
 app.description=${app.name} is a Spring Boot application
+server.port=9001
