--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,4 @@ spring.application.name=word
 server.port=9001
 server.servlet.context-path=/word
 mybatis.config-location=classpath:mybatis/mybatis.cfg.xml
-mybatis.type-aliases-package=com.simon.boot.word.entity
-mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
