--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1/e_word
-spring.datasource.username=root
+spring.datasource.username=simon
 spring.datasource.password=7589014bn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.application.name=word
