add date format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ server.port=9001
 server.servlet.context-path=/word
 mybatis.config-location=classpath:mybatis/mybatis.cfg.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+spring.jacksondate-format=yyyy-MM-dd HH:mm:ss
