--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1/e_word
-spring.datasource.username=simon
-spring.datasource.password=7589014bn
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# application config
 spring.application.name=word
+
+# servlet config
 server.port=9001
 server.servlet.context-path=/word
+
+# mybatis config
 mybatis.config-location=classpath:mybatis/mybatis.cfg.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
