--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 # spring jackson config
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+
+# log
+logging.level.root=INFO
+logging.path=/var/log/word
+logging.file=word.log
