--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jackson.time-zone=GMT+8
 
 # log
 logging.level.root=INFO
-logging.path=/var/log/word
+logging.path=/var/jenkins_home/tools/lib/log
 logging.file=word.log
