add log and info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,4 @@ spring.jackson.time-zone=GMT+8
 
 # log
 logging.level.root=INFO
-logging.path=/home/simon/java/jenkins/tools/lib/log
-logging.file=word.log
+logging.path=../logs
