--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jackson.time-zone=GMT+8
 # log
 logging.level.root=INFO
 logging.path=../logs
+
+#jwt
+jwt.secret=secret
+jwt.expiration=7200
