--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.servlet.context-path=/word
 
 # mybatis config
 mybatis.config-location=classpath:mybatis/mybatis.cfg.xml
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
 
 # spring jackson config
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
