--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
 		<swagger.version>2.7.0</swagger.version>
 		<hutool.version>4.5.7</hutool.version>
 		<mybatis.version>2.0.1</mybatis.version>
+		<poi.version>3.13</poi.version>
+		<poi-ooxml.version>3.13</poi-ooxml.version>
+		<commons-lang3.version>3.9</commons-lang3.version>
 	</properties>
 
 	<dependencies>
@@ -117,6 +120,29 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.collections -->
+		<dependency>
+			<groupId>org.apache.directory.studio</groupId>
+			<artifactId>org.apache.commons.collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		<!-- poi Excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>${poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${poi-ooxml.version}</version>
 		</dependency>
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
