--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # application config
 spring.application.name=word
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # servlet config
 server.port=9001
