--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # application config
 spring.application.name=word
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 # servlet config
 server.port=9001
@@ -20,6 +20,8 @@ logging.path=../logs
 
 #jwt
 jwt.secret=secret
-jwt.expiration=7200
+jwt.expiration=10
 jwt.tokenHeader=Authorization
 jwt.tokenHead=Bearer 
+jwt.oaHead=Oa 
+jwt.udpHead=Udp 
