--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ src/main/resources/mybatis/mybatis-generator.xml
 src/main/resources/application-dev.properties
 src/main/resources/application-prod.properties
 src/test/java/com/simon/boot/word/RsaEncryptAndDecodeUtil.java
+src/test/java/com/simon/boot/word/GeneratePwd.java
