--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
 			<!--<groupId>org.springframework.cloud</groupId>-->
 			<!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
 		<!--</dependency>-->
+		<!--向方法区中添加class信息-->
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>3.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<!--<dependencyManagement>-->
